force-app/main/default/objects/custom_create300__c/custom_create300__c.object-meta.xml
<CustomObject>
    <label>Custom created object300</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects300</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>