force-app/main/default/objects/custom_create300__c/fields/custom_create_300field528__c.field-meta.xml
<CustomField>
    <fullName>custom_create_300field528__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 300field528</label>
    <type>Checkbox</type>
</CustomField>